crates/shep-cli/src/output/snapshots/shep__output__table__tests__a_smit_is_never_dropped_at_full_width.snap
---
source: crates/shep-cli/src/output/table.rs
assertion_line: 1020
expression: rendered
---
┌────┬────────┬────────┬──────┬──────────┬──────┬─────┬─────┬────────┬──────┬───────────────┐
│ ID │ NAME   │ STATUS │ PID  │ RESTARTS │ EXIT │ CPU │ MEM │ UPTIME │ FOLD │ SMIT          │
├────┼────────┼────────┼──────┼──────────┼──────┼─────┼─────┼────────┼──────┼───────────────┤
│ 0  │ web    │ [38;5;29m(o.o)[0m  │ 1234 │ 0        │ -    │ -   │ -   │ 1h 2m  │ -    │ ▲ main@a1b2c3 │
│ 1  │ worker │ [38;5;221m(o~o)[0m  │ -    │ 0        │ -    │ -   │ -   │ 0s     │ -    │ -             │
│ 2  │ api    │ [38;5;166m(x.x)[0m  │ -    │ 4        │ -    │ -   │ -   │ 0s     │ -    │ ⏸ main@f6e5d4 │
│ 3  │ cron   │ [38;5;245m(-.-)[0m  │ -    │ 0        │ -    │ -   │ -   │ 0s     │ -    │ -             │
└────┴────────┴────────┴──────┴──────────┴──────┴─────┴─────┴────────┴──────┴───────────────┘
