crates/shep-cli/src/output/snapshots/shep__output__table__tests__a_smit_is_the_first_column_dropped_when_the_window_narrows.snap
---
source: crates/shep-cli/src/output/table.rs
expression: rendered
---
┌────┬────────┬────────┬──────┬──────────┬──────┬─────┬─────┬─────┬────────┬──────┐
│ ID │ NAME   │ STATUS │ PID  │ RESTARTS │ EXIT │ CFG │ CPU │ MEM │ UPTIME │ FOLD │
├────┼────────┼────────┼──────┼──────────┼──────┼─────┼─────┼─────┼────────┼──────┤
│ [38;5;245m0[0m  │ web    │ [38;5;29m(o.o)[0m  │ 1234 │ [38;5;245m0[0m        │ [38;5;245m-[0m    │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ 1h 2m  │ [38;5;245m-[0m    │
│ [38;5;245m1[0m  │ worker │ [38;5;221m(o~o)[0m  │ [38;5;245m-[0m    │ [38;5;245m0[0m        │ [38;5;245m-[0m    │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ 0s     │ [38;5;245m-[0m    │
│ [38;5;245m2[0m  │ api    │ [38;5;166m(x.x)[0m  │ [38;5;245m-[0m    │ [38;5;221m4[0m        │ [38;5;245m-[0m    │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ 0s     │ [38;5;245m-[0m    │
│ [38;5;245m3[0m  │ cron   │ [38;5;245m(-.-)[0m  │ [38;5;245m-[0m    │ [38;5;245m0[0m        │ [38;5;245m-[0m    │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ [38;5;245m-[0m   │ 0s     │ [38;5;245m-[0m    │
└────┴────────┴────────┴──────┴──────────┴──────┴─────┴─────┴─────┴────────┴──────┘
  SMIT hidden. Widen the window, or use --format json.
