crates/shep-cli/src/output/snapshots/shep__output__table__tests__full_narrow_drops_the_status_word_before_a_whole_column.snap
---
source: crates/shep-cli/src/output/table.rs
expression: rendered
---
┌────┬────────┬────────┬──────┬──────────┬──────┬─────┬─────┬────────┬──────┐
│ ID │ NAME   │ STATUS │ PID  │ RESTARTS │ EXIT │ CPU │ MEM │ UPTIME │ FOLD │
├────┼────────┼────────┼──────┼──────────┼──────┼─────┼─────┼────────┼──────┤
│ 0  │ web    │ [38;5;29m(o.o)[0m  │ 1234 │ 0        │ -    │ -   │ -   │ 1h 2m  │ -    │
│ 1  │ worker │ [38;5;221m(o~o)[0m  │ -    │ 0        │ -    │ -   │ -   │ 0s     │ -    │
│ 2  │ api    │ [38;5;166m(x.x)[0m  │ -    │ 4        │ -    │ -   │ -   │ 0s     │ -    │
│ 3  │ cron   │ [38;5;245m(-.-)[0m  │ -    │ 0        │ -    │ -   │ -   │ 0s     │ -    │
└────┴────────┴────────┴──────┴──────────┴──────┴─────┴─────┴────────┴──────┘
