crates/shep-cli/src/output/snapshots/shep__output__table__tests__full_under_no_color_pins_sheep_and_boxes_without_colour.snap
---
source: crates/shep-cli/src/output/table.rs
expression: rendered
---
┌────┬────────┬────────┬──────┬──────────┬──────┬─────┬─────┬────────┬──────┐
│ ID │ NAME   │ STATUS │ PID  │ RESTARTS │ EXIT │ CPU │ MEM │ UPTIME │ FOLD │
├────┼────────┼────────┼──────┼──────────┼──────┼─────┼─────┼────────┼──────┤
│ 0  │ web    │ (o.o)  │ 1234 │ 0        │ -    │ -   │ -   │ 1h 2m  │ -    │
│ 1  │ worker │ (o~o)  │ -    │ 0        │ -    │ -   │ -   │ 0s     │ -    │
│ 2  │ api    │ (x.x)  │ -    │ 4        │ -    │ -   │ -   │ 0s     │ -    │
│ 3  │ cron   │ (-.-)  │ -    │ 0        │ -    │ -   │ -   │ 0s     │ -    │
└────┴────────┴────────┴──────┴──────────┴──────┴─────┴─────┴────────┴──────┘
